# metafid-

./: .gitignor  .gitignore  metafid.xmind  mf.drawio  pyproject.toml  yes  yes.pub
example/: HMM.ipynb  HMM.pickle  call.xlsx  create_option_database.ipynb  do_job.py  example.ipynb  mw.xlsx  option_strategy.ipynb  put.xlsx  random_forest.pickle  rep_bear_call_spread.xlsx  rep_bull_call_spread.xlsx  rep_bull_put_spread.xlsx  rep_call_back_spread.xlsx  rep_covered_call.xlsx  rep_married_put.xlsx  rep_o_strategy.xlsx  update_db.ipynb  ~$rep_married_put.xlsx
src/metafid/algorithm/ta/: __init__.py  trend.py
src/metafid/data/: __init__.py  tse.py  tsetmc.py
src/metafid/data/tsetmc/: __init__.py  tsetmc.py
src/metafid/deriv/: __init__.py  build_position.py  option.py  strategy.py
src/metafid/mfw/: __init__.py  db_psycopg.py
src/metafid/mfw/deriv/: __init__.py  option.py
src/metafid/mfw/portfolio_optimization/: __init__.py  kelly.py
src/metafid/mfw/ta/: __init__.py  ri_power.py  trend.py
src/metafid/option/: pricing.py
src/metafid/portfolio_optimization/: __init__.py  kelly.py
src/metafid/quant/: __init__.py  simulate.py
src/metafid/ta/: __init__.py  candle.py  dow_theory.py  ripower.py  trend.py
