[tool.poetry]
name = "metafid"
version = "0.1.4"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.24.2"


[[tool.poetry.source]]
name = "metafid"
url = "https://github.com/yghaderi/metafid"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    {include="metafid", from="src"},
    {include="metafid/quant", flom="src"},
    {include="metafid/deriv", flom="src"},
    {include="metafid/ta", flom="src"},
    {include="metafid/data", flom="src"},
    {include="metafid/mfw", flom="src"},
    {include="metafid/mfw/deriv", flom="src"},
]

exclude = ["dist",
]

[tool.poetry.urls]
docs=""